--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,14 @@
 {
-	"builds":[
-		{
-			"src":"api/main.py",
-			"use":"@vercel/python"
-		}
-	],
-	"routes":[
-		{
-			"src":"/(.*)",
-			"dest":"api/main.py"
-		}
-
-	]
-}
+    "builds": [
+      {
+        "src": "main.py",
+        "use": "@vercel/python"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "main.py"
+      }
+    ]
+  }
