--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,13 @@
 {
-    "builds": [
-      {
-        "src": "main.py",
-        "use": "@vercel/python"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "main.py"
-      }
-    ]
-  }
+    "functions": {
+        "api/index.py": {
+          "runtime": "python@3.9"
+        }
+      },
+      "rewrites": [
+        {
+          "source": "/(.*)",
+          "destination": "/api/index.py"
+        }
+      ]
+}
