--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,15 @@
 {
-    "functions": {
-        "api/index.py": {
-          "runtime": "python@3.9"
-        }
-      },
-      "rewrites": [
-        {
-          "source": "/(.*)",
-          "destination": "/api/index.py"
-        }
-      ]
+  "devCommand": "uvicorn main:app --host 0.0.0.0 --port 3000",
+  "builds": [
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "api/index.py"
+    }
+  ]
 }
